[package]
name = "config-jam-demo"
version = "0.1.0"
authors = ["Simon Chemouil <simon.chemouil@lambdacube.fr>"]
edition = "2018"

#break out of workspace
[workspace]

[dependencies]
config-jam = { path = "../config-jam", version = "0.1.0"}
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
lazy_static = "1.2.0"
envy = "0.3.3"